Agentforce/force-app/main/default/objects/Bid__c/fields/Pre_RFI_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_RFI_Status__c</fullName>
    <description>AD-448 &apos;RFI Bid/No Bid&apos; Approval</description>
    <label>Bid/No Bid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
                <isActive>false</isActive>
                <label>Not Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>