Agentforce/force-app/main/default/objects/Bid__c/fields/Pre_RFP_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_RFP_Status__c</fullName>
    <description>AD-448 &apos;RFI Bid/No Bid&apos; Approval</description>
    <label>Pre-RFP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>