Agentforce/force-app/main/default/objects/Bid__c/fields/Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Date__c</fullName>
    <formula>Opportunity__r.Presentation_Date__c</formula>
    <label>Presentation Date</label>
    <type>Date</type>
</CustomField>