Agentforce/force-app/main/default/objects/Bid__c/fields/Presentation_Date_DEP__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Date_DEP__c</fullName>
    <description>AD-716 - Store the Presentation Date</description>
    <label>Presentation Date DEP</label>
    <type>Date</type>
</CustomField>