Agentforce/force-app/main/default/objects/Bid__c/fields/Presentation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Outcome__c</fullName>
    <formula>TEXT(Opportunity__r.Presentation_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presentation Outcome</label>
    <type>Text</type>
</CustomField>