Agentforce/force-app/main/default/objects/Bid__c/fields/Presentation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Request_Date__c</fullName>
    <description>Presentation Request Date- Data Dictionary Consolidation</description>
    <label>Presentation Request Date</label>
    <type>Date</type>
</CustomField>