Agentforce/force-app/main/default/objects/Bid__c/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <description>AD-307 - text field to show the Service Summary of the Opportunity</description>
    <formula>IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Automotive&quot;), &quot;Automotive; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Biomedical Management Services&quot;), &quot;Biomedical Management Services; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Car Park Management&quot;), &quot;Car Park Management; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Catering&quot;), &quot;Catering; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Cleaning&quot;), &quot;Cleaning; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Compliance Services&quot;), &quot;Compliance Services; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Hard Services&quot;), &quot;Hard Services; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Horticulture&quot;), &quot;Horticulture; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Industrial Painting&quot;), &quot;Industrial Painting; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;IoT&quot;), &quot;IoT; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Management Services&quot;), &quot;Management Services; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Other&quot;), &quot;Other; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Pest Control&quot;), &quot;Pest Control; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;PRM&quot;), &quot;PRM; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Security&quot;), &quot;Security; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Soft Services&quot;), &quot;Soft Services; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Strategic Consulting&quot;), &quot;Strategic Consulting; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Technical&quot;), &quot;Technical; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;TFM&quot;), &quot;TFM; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;VAS Specialized Services&quot;), &quot;VAS Specialized Services; &quot;, null) &amp;
IF(INCLUDES(Opportunity__r.Service_Summary__c, &quot;Waste Management&quot;), &quot;Waste Management; &quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Summary</label>
    <type>Text</type>
</CustomField>