Agentforce/force-app/main/default/objects/Bid__c/fields/Proposal_ITT_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ITT_Issue_Date__c</fullName>
    <description>Proposal ITT Issue Date- Data Dictionary Consolidation</description>
    <label>Proposal ITT Issue Date</label>
    <type>Date</type>
</CustomField>