Agentforce/force-app/main/default/objects/Bid__c/fields/Proposal_ITT_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ITT_Submission_Date__c</fullName>
    <description>Proposal ITT Submission Date - Data Dictionary Consolidation</description>
    <label>Proposal ITT Submission Date</label>
    <type>Date</type>
</CustomField>