Agentforce/force-app/main/default/objects/Bid__c/fields/Reason_1__c.field-meta.xml
<CustomField>
    <fullName>Reason_1__c</fullName>
    <description>Reason 1- Data Dictionary Consolidation</description>
    <label>Reason 1</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>