Agentforce/force-app/main/default/objects/Bid__c/fields/Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Reason_2__c</fullName>
    <description>Reason 2- Data Dictionary Consolidation</description>
    <label>Reason 2</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>