Agentforce/force-app/main/default/objects/Bid__c/fields/Reason_3__c.field-meta.xml
<CustomField>
    <fullName>Reason_3__c</fullName>
    <description>Reason 3- Data Dictionary Consolidation</description>
    <label>Reason 3</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>