Agentforce/force-app/main/default/objects/Bid__c/fields/Reason_for_Reference_1__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Reference_1__c</fullName>
    <description>Reason for Reference 1- Data Dictionary Consolidation</description>
    <label>Reason for Reference 1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>