Agentforce/force-app/main/default/objects/Bid__c/fields/Reason_for_Reference_2__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Reference_2__c</fullName>
    <description>Reason for Reference 2 - Data Dictionary Consolidation</description>
    <label>Reason for Reference 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>