Agentforce/force-app/main/default/objects/Bid__c/fields/Reference_1__c.field-meta.xml
<CustomField>
    <fullName>Reference_1__c</fullName>
    <description>Reference 1- Data Dictionary Consolidation</description>
    <label>Reference 1</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>