Agentforce/force-app/main/default/objects/Bid__c/fields/Reference_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_2__c</fullName>
    <description>Reference 2- Data Dictionary Consolidation</description>
    <label>Reference 2</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>