Agentforce/force-app/main/default/objects/Bid__c/fields/Reference_3__c.field-meta.xml
<CustomField>
    <fullName>Reference_3__c</fullName>
    <description>Reference 3- Data Dictionary Consolidation</description>
    <label>Reference 3</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>