Agentforce/force-app/main/default/objects/Bid__c/fields/Regional_Operational_Director__c.field-meta.xml
<CustomField>
    <fullName>Regional_Operational_Director__c</fullName>
    <label>Regional Operational Director</label>
    <length>100</length>
    <type>Text</type>
</CustomField>