Agentforce/force-app/main/default/objects/Bid__c/fields/Regional_Operational_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Operational_Manager__c</fullName>
    <label>Regional Operational Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>