Agentforce/force-app/main/default/objects/Bid__c/fields/Relationship_Comments__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Comments__c</fullName>
    <description>Relationship Comments- Data Dictionary Consolidation</description>
    <label>Relationship Comments</label>
    <type>TextArea</type>
</CustomField>