Agentforce/force-app/main/default/objects/Bid__c/fields/Response_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Response_Requirements__c</fullName>
    <description>Response Requirements- Data Dictionary Consolidation</description>
    <label>Response Requirements</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>