Agentforce/force-app/main/default/objects/Bid__c/fields/RFI_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Approval_Status__c</fullName>
    <label>RFI Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Sent (default)</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>