Agentforce/force-app/main/default/objects/Bid__c/fields/RFI_Bid_No_Bid_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Bid_No_Bid_Approval_Status__c</fullName>
    <formula>TEXT(Opportunity__r.RFI_Bid_No_Bid_Approval_Status__c )</formula>
    <label>RFI Bid/No Bid Approval Status</label>
    <type>Text</type>
</CustomField>