Agentforce/force-app/main/default/objects/Bid__c/fields/RFI_Compliance_Review_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Compliance_Review_Approval_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Bid_Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Compliance Review Approval Status</label>
    <type>Text</type>
</CustomField>