Agentforce/force-app/main/default/objects/Bid__c/fields/RFI_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Issue_Date__c</fullName>
    <description>Field to display the RFI Issue Date of the related Opportunity</description>
    <formula>Opportunity__r.RFI_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Issue Date</label>
    <type>Date</type>
</CustomField>