Agentforce/force-app/main/default/objects/Bid__c/fields/RFI_Outcome__c.field-meta.xml
<CustomField>
    <fullName>RFI_Outcome__c</fullName>
    <formula>TEXT(Opportunity__r.RFI_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Outcome</label>
    <type>Text</type>
</CustomField>