Agentforce/force-app/main/default/objects/Bid__c/fields/RFI_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RFI_Submitted__c</fullName>
    <formula>NOT(ISBLANK(RFI_Submitted_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Submitted</label>
    <type>Checkbox</type>
</CustomField>