Agentforce/force-app/main/default/objects/Bid__c/fields/RFI_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Submitted_Date__c</fullName>
    <description>Field to capture the RFI Submitted Date from the related Opportunity</description>
    <formula>Opportunity__r.RFI_Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Submitted Date</label>
    <type>Date</type>
</CustomField>