Agentforce/force-app/main/default/objects/Bid__c/fields/RFP_Bid_No_Bid_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RFP_Bid_No_Bid_Approval_Status__c</fullName>
    <formula>TEXT( Opportunity__r.RFP_Bid_No_Bid_Approval_Status__c )</formula>
    <label>RFP Bid/No Bid Approval Status</label>
    <type>Text</type>
</CustomField>