Agentforce/force-app/main/default/objects/Bid__c/fields/RFP_Compliance_Review_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RFP_Compliance_Review_Approval_Status__c</fullName>
    <formula>TEXT(Opportunity__r.RFP_Compliance_Review_Approval_Status__c)</formula>
    <label>RFP Compliance Review Approval Status</label>
    <type>Text</type>
</CustomField>