Agentforce/force-app/main/default/objects/Bid__c/fields/RFP_Outcome__c.field-meta.xml
<CustomField>
    <fullName>RFP_Outcome__c</fullName>
    <formula>TEXT(Opportunity__r.RFP_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFP Outcome</label>
    <type>Text</type>
</CustomField>