Agentforce/force-app/main/default/objects/Bid__c/fields/RFP_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RFP_Submitted__c</fullName>
    <formula>NOT(ISBLANK(RFP_Submitted_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFP Submitted</label>
    <type>Checkbox</type>
</CustomField>