Agentforce/force-app/main/default/objects/Bid__c/fields/RFP_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Submitted_Date__c</fullName>
    <description>AD-307 - date field to capture when the RFP was submitted against the Opportunity</description>
    <formula>Opportunity__r.RFP_Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFP Submitted Date</label>
    <type>Date</type>
</CustomField>