Agentforce/force-app/main/default/objects/Bid__c/fields/Strategy1__c.field-meta.xml
<CustomField>
    <fullName>Strategy1__c</fullName>
    <description>Strategy 1- Data Dictionary Consolidation</description>
    <label>Strategy 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>