Agentforce/force-app/main/default/objects/Bid__c/fields/Strategy2__c.field-meta.xml
<CustomField>
    <fullName>Strategy2__c</fullName>
    <description>Strategy 2- Data Dictionary Consolidation</description>
    <label>Strategy 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>