Agentforce/force-app/main/default/objects/Bid__c/fields/Strategy3__c.field-meta.xml
<CustomField>
    <fullName>Strategy3__c</fullName>
    <description>Strategy 3- data Dictionary Consolidation</description>
    <label>Strategy 3</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>