Agentforce/force-app/main/default/objects/Bid__c/fields/System_External_Debrief__c.field-meta.xml
<CustomField>
    <fullName>System_External_Debrief__c</fullName>
    <description>Identify if External Debrief exists</description>
    <formula>NOT(ISBLANK(External_Debrief__c))</formula>
    <label>System: External Debrief</label>
    <type>Checkbox</type>
</CustomField>