Agentforce/force-app/main/default/objects/Bid__c/fields/System_Internal_Debrief__c.field-meta.xml
<CustomField>
    <fullName>System_Internal_Debrief__c</fullName>
    <description>Identify is Internal Debrief is populated</description>
    <formula>NOT(ISBLANK(Internal_Debrief__c))</formula>
    <label>System: Internal Debrief</label>
    <type>Checkbox</type>
</CustomField>