Agentforce/force-app/main/default/objects/Bid__c/fields/T_C_s_Type__c.field-meta.xml
<CustomField>
    <fullName>T_C_s_Type__c</fullName>
    <label>T&amp;C&apos;s Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>