Agentforce/force-app/main/default/objects/Bid__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>AD-307 - number field to capture the term of the Opportunity</description>
    <formula>Opportunity__r.Contract_Term_String__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>