Agentforce/force-app/main/default/objects/Bid__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <description>Field to capture the total contract value from the related Opportunity</description>
    <formula>Opportunity__r.Total_Contract_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>