Agentforce/force-app/main/default/objects/Bid__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>AD-307 - field to capture the Opportunity type</description>
    <formula>TEXT(Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>