Agentforce/force-app/main/default/objects/Bid__c/fields/Win_Theme1__c.field-meta.xml
<CustomField>
    <fullName>Win_Theme1__c</fullName>
    <description>Win Theme 1- Data Dictionary Consolidation</description>
    <label>Win Theme 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>