Agentforce/force-app/main/default/objects/Bid__c/fields/Win_Theme2__c.field-meta.xml
<CustomField>
    <fullName>Win_Theme2__c</fullName>
    <description>Win Theme 2- Data Dictionary Consolidation</description>
    <label>Win Theme 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>