Agentforce/force-app/main/default/objects/Bid__c/fields/Win_Theme3__c.field-meta.xml
<CustomField>
    <fullName>Win_Theme3__c</fullName>
    <description>Win Theme 3- Data Dictionary consolidation</description>
    <label>Win Theme 3</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>