Agentforce/force-app/main/default/objects/Bid__c/recordTypes/Full_Bid.recordType-meta.xml
<RecordType>
    <fullName>Full_Bid</fullName>
    <active>true</active>
    <label>RFI &amp; RFP</label>
</RecordType>