Agentforce/force-app/main/default/objects/Bid__c/recordTypes/Lite_Bid.recordType-meta.xml
<RecordType>
    <fullName>Lite_Bid</fullName>
    <active>true</active>
    <label>RFP</label>
</RecordType>