Agentforce/force-app/main/default/objects/Bid__c/validationRules/Bid_Start_Before_Award_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Bid_Start_Before_Award_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
Bid_Start_Date__c &gt;  Opportunity__r.CloseDate,
NOT(Opportunity_Stage__c == &apos;7. Closed Won&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Bid_Start_Date__c</errorDisplayField>
    <errorMessage>The Bid Start Date should be before the Award Date</errorMessage>
</ValidationRule>