Agentforce/force-app/main/default/objects/Bid__c/validationRules/One_Bid_Against_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Bid_Against_Opportunity</fullName>
    <active>true</active>
    <description>AD-289 - validation rule to verify if the related Opportunity already has a Bid against it</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
    ISNEW(),
    Opportunity__r.Bid_Exists__c
)</errorConditionFormula>
    <errorMessage>You are unable to create a new bid as one already exists against this Opportunity</errorMessage>
</ValidationRule>