Agentforce/force-app/main/default/objects/Bid__c/validationRules/Prevent_Bid_Name_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Bid_Name_Changed</fullName>
    <active>true</active>
    <description>Do not allow Bid Reference (Name) to be changed once set.</description>
    <errorConditionFormula>AND(
				 $Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
				ISCHANGED(Name)
				)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Bid Reference cannot be changed once set.</errorMessage>
</ValidationRule>