Agentforce/force-app/main/default/objects/Bid__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Owner_Business_Unit__c</columns>
    <columns>Type__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Sub_Stage__c</columns>
    <columns>Bid_Manager__c</columns>
    <columns>Delegated_Approver__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>