Agentforce/force-app/main/default/objects/Bid__c/listViews/My_Bids.listView-meta.xml
<ListView>
    <fullName>My_Bids</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Opportunity_Sub_Stage__c</columns>
    <columns>Award_Date__c</columns>
    <columns>Delegated_Approver__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Bids</label>
</ListView>